# Minecraft-Backup-Management

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  application.py  main.py  paths.py
app/logic/: __init__.py  dir_check.py  regex_funcs.py  world_history.py  zip_extractor.py
app/settings/: __init__.py  settings_list.py
app/windows/: auto_extract_confirm.py  auto_extract_dialog.py  main_window.py  window_build.py
app/windows/backup_cleanup/: config.py  dialog.py  status.py
app/windows/backup_extract/: __init__.py  config.py  confirm.py  dialog.py  status.py
app/windows/clear_history/: dialog.py
