[project]
name = "app"
version = "1.0.0"
description = "App that manages Minecraft saves and backups"
authors = [
    {name = "tousef-refuge"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
